src/components/data-table-v2/_data-table-v2-core.scss
//
// Copyright IBM Corp. 2016, 2018
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

@import '../../globals/scss/css--typography';
@import '../../globals/scss/functions';
@import '../../globals/scss/vendor/@carbon/elements/scss/import-once/import-once';
@import '../../globals/scss/vars';

@mixin data-table-v2-core {
  .#{$prefix}--data-table-v2-container {
    width: 100%;
    min-width: rem(500px);
    overflow-x: auto;
    padding-top: $spacing-3xs; // allow space for focus styles
  }

  .#{$prefix}--data-table-v2 {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
    border-bottom: 1px solid $ui-03;

    @if feature-flag-enabled('breaking-changes-x') {
      min-width: rem(500px);
    }

    thead {
      @include typescale('zeta');
      background-color: $ui-02;
      font-weight: 700;
      border-right: 1px solid $ui-03;
    }

    tbody {
      @include typescale('zeta');
      background-color: $ui-01;
      border-right: 1px solid $ui-03;
    }

    tr {
      height: rem(48px);

      &:hover {
        td {
          background-color: rgba($brand-02, 0.1);
          border-top: 1px solid $brand-01;
          border-bottom: 1px solid $brand-01;

          &:first-of-type {
            border-left: 1px solid $brand-01;
          }

          &:last-of-type {
            border-right: 1px solid $brand-01;
          }
        }

        .#{$prefix}--overflow-menu {
          opacity: 1;
        }
      }
    }

    th {
      border-top: 1px solid $ui-03;
    }

    th,
    td {
      @include typescale('zeta');
      border-top: 1px solid $ui-03;
      padding-left: $spacing-sm;
      vertical-align: middle;
      text-align: left;
      color: $text-01;

      &:first-of-type {
        padding-left: rem(24px);
        border-left: 1px solid $ui-03;
      }

      &:last-of-type {
        padding-right: $spacing-lg;
      }
    }

    // Overrrides
    .#{$prefix}--checkbox-label {
      padding-left: rem(28px);
    }

    .#{$prefix}--overflow-menu {
      opacity: 0;

      &:focus {
        outline: 0;
        opacity: 1;
        box-shadow: none;

        .#{$prefix}--overflow-menu__icon {
          box-shadow: inset 0px 0px 0px 1px $brand-01;
        }
      }
    }

    .#{$prefix}--overflow-menu__icon {
      transform: rotate(90deg);
    }
  }

  // Options

  .#{$prefix}--data-table-v2-header {
    margin-bottom: $spacing-xs;
    color: $text-01;
  }

  .#{$prefix}--data-table-v2--zebra {
    tbody tr:nth-child(even) {
      background-color: $ui-02;
    }
  }

  .#{$prefix}--data-table-v2--no-border {
    & {
      border-bottom-color: transparent;
    }

    thead,
    tbody {
      border-right-color: transparent;
    }

    th,
    td {
      &:first-of-type {
        border-left-color: transparent;
      }
    }
  }

  .#{$prefix}--data-table-v2--compact {
    tbody tr {
      height: rem(24px);
    }
  }

  .#{$prefix}--data-table-v2--short {
    tbody tr {
      height: rem(32px);
    }
  }

  .#{$prefix}--data-table-v2--tall {
    tbody tr {
      height: rem(64px);
    }
  }

  .#{$prefix}--data-table-v2--static {
    width: auto;
  }

  .#{$prefix}--data-table-v2--zebra tbody tr.#{$prefix}--data-table-v2--selected,
  tbody tr.#{$prefix}--data-table-v2--selected {
    background-color: rgba($brand-02, 0.1);
  }
}

@mixin data-table-v2-core--x {
  //-------------------------------------------------
  //Main Container
  //-------------------------------------------------
  .#{$prefix}--data-table-v2-container {
    min-width: rem(500px);
    width: 100%;
    overflow-x: auto;
    padding-top: $spacing-3xs; // allow space for focus styles
  }

  //-------------------------------------------------
  //Main Container > Table Header
  //-------------------------------------------------
  .#{$prefix}--data-table-v2-header {
    background: $ui-01;
    height: rem(88px);
    padding: rem(22px) 0 0 $spacing-md;
  }

  .#{$prefix}--data-table-v2-title {
    @include type-style('productive-heading-03');
    color: $text-01;
  }

  .#{$prefix}--data-table-v2-optional {
    @include type-style('body-short-01');
    color: $text-02;
  }

  //-------------------------------------------------
  //Main Container > Table (Default Styles)
  //-------------------------------------------------
  .#{$prefix}--data-table-v2 {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;

    thead {
      @include type-style('heading-01');
      background-color: $ui-03;
    }

    tbody {
      @include type-style('body-short-01');
      background-color: $ui-01;
      width: 100%;
    }

    tr {
      border: none;
      height: rem(48px);
      width: 100%;
    }

    tbody tr:hover:not(.#{$prefix}--row-disabled) {
      background: $hover-field;
    }

    tbody tr:hover:not(.#{$prefix}--row-disabled) td {
      color: $text-01;
      background: $hover-field;
      border-bottom: 1px solid $hover-field;
      border-top: 1px solid $hover-field;
    }

    th,
    td {
      padding-left: $spacing-sm;
      padding-right: $spacing-sm;
      vertical-align: top;
      text-align: left;
    }

    th {
      color: $text-01;
      background-color: $ui-03;
      border-top: 1px solid $ui-03;
      border-bottom: 1px solid $ui-03;
    }

    th:first-of-type:not(.#{$prefix}--table-column-checkbox) {
      padding-left: $spacing-lg;
    }

    th.#{$prefix}--table-column-icon:hover,
    th.#{$prefix}--table-column-menu:hover,
    th.#{$prefix}--table-expand-v2:hover {
      background: $ui-03;
    }

    .#{$prefix}--table-header-label {
      display: block;
      padding: rem(14px) 0;
    }

    td {
      background: $ui-01;
      color: $text-02;
      border-top: 1px solid $ui-01;
      border-bottom: 1px solid $ui-03;
      padding: rem(14px) $spacing-sm;
    }

    td:first-of-type {
      padding-left: $spacing-lg;
    }

    td:last-of-type {
      padding-right: $spacing-lg;
    }

    // specific padding for checkbox columns
    .#{$prefix}--table-column-checkbox,
    .#{$prefix}--table-column-checkbox:first-of-type {
      padding: rem(10px) $spacing-md 0 $spacing-md;
    }

    // specific padding for overflow menu columns
    .#{$prefix}--table-column-menu,
    .#{$prefix}--table-column-menu:last-of-type {
      padding-top: rem(8px);
      padding-right: rem(8px);
    }

    td.#{$prefix}--table-column-menu .#{$prefix}--overflow-menu[aria-expanded='false']:hover {
      background: $ui-03;
    }

    // Overflow Menu Overrides
    td.#{$prefix}--table-column-menu .#{$prefix}--overflow-menu[aria-expanded='false']:focus {
      @include focus-outline('outline');
    }

    td.#{$prefix}--table-column-menu .#{$prefix}--overflow-menu[aria-expanded='true']:focus {
      outline: none;
    }

    td.#{$prefix}--table-column-menu .#{$prefix}--overflow-menu .#{$prefix}--overflow-menu__icon {
      opacity: 0;
    }

    td.#{$prefix}--table-column-menu .#{$prefix}--overflow-menu:hover .#{$prefix}--overflow-menu__icon,
    td.#{$prefix}--table-column-menu .#{$prefix}--overflow-menu:focus .#{$prefix}--overflow-menu__icon,
    tr:hover td.#{$prefix}--table-column-menu .#{$prefix}--overflow-menu .#{$prefix}--overflow-menu__icon {
      opacity: 1;
    }
  }

  //-------------------------------------------------
  //NUMERICAL COLUMN
  //-------------------------------------------------
  td.#{$prefix}--data-table-v2--numerical-cell,
  th.#{$prefix}--data-table-v2--numerical-cell {
    text-align: right;
  }

  //-------------------------------------------------
  //DISABLED
  //-------------------------------------------------
  tbody tr.#{$prefix}--row-disabled {
    cursor: not-allowed;
  }

  tbody
    tr.#{$prefix}--row-disabled
    .#{$prefix}--table-expand-v2
    .#{$prefix}--table-expand-v2__button
    .#{$prefix}--table-expand-v2__svg,
  tbody tr.#{$prefix}--row-disabled .#{$prefix}--table-column-menu .#{$prefix}--overflow-menu .#{$prefix}--overflow-menu__icon {
    fill: $disabled;
    cursor: not-allowed;
  }

  tbody tr.#{$prefix}--row-disabled .#{$prefix}--table-column-menu .#{$prefix}--overflow-menu,
  tbody tr.#{$prefix}--row-disabled .#{$prefix}--table-column-menu .#{$prefix}--overflow-menu[aria-expanded='false']:hover {
    background: $disabled-background-color;
    cursor: not-allowed;
  }

  tbody tr.#{$prefix}--row-disabled td,
  tbody tr.#{$prefix}--row-disabled td:hover {
    color: $disabled;
    background: $disabled-background-color;
    cursor: not-allowed;
  }

  tbody tr.#{$prefix}--row-disabled:hover {
    cursor: not-allowed;
    color: $disabled;
    background: $disabled-background-color;
  }

  tbody tr.#{$prefix}--row-disabled .#{$prefix}--overflow-menu {
    display: none;
  }
}

@include exports('data-table-v2-core') {
  @if feature-flag-enabled('components-x') {
    @include data-table-v2-core--x;
  } @else {
    @include data-table-v2-core;
  }
}

